--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         <!-- DECLARATION -->
         <footer class="cv-footer">
-            <p>Je certifie sur l’honneur la validité des informations ci-dessus.</p>
+            <p>Je certifie sur l’honneur et la validité des informations ci-dessus renseignées.</p>
         </footer>
 
     </div>
