--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <li><strong>Nationalité :</strong> Béninoise</li>
             <li><strong>Sexe :</strong> Masculin</li>
             <li><strong>Situation matrimoniale :</strong> Célibataire</li>
+            <li><strong>Adresse email :</strong><a href="mailto:12houenou@gmail.com">12houenou@gmail.com</a></li>
             <li><strong>Adresse email :</strong> 12houenou@gmail.com</li>
             <li><strong>Téléphone :</strong> 0165543761 / 0167401333</li>
         </ul>
